--- a/app/index.html
+++ b/app/index.html
@@ -10,37 +10,7 @@
 </head>
 <body>
 
-  <!-- <div class="title-bar" data-responsive-toggle="example-animated-menu" data-hide-for="medium">
-    <button class="menu-icon" type="button" data-toggle></button>
-    <div class="title-bar-title">Menu</div>
-  </div>
-
-  <div class="top-bar" id="example-animated-menu" data-animate="hinge-in-from-top spin-out">
-    <div class="top-bar-left">
-      <span class="menu-text">LOGO</span>
-    </div>
-    <div class="top-bar-right">
-      <ul class="dropdown menu">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="row demo-toggle-title">
-    <div class="columns">
-      <h2>Responsive Toggle with Animation</h2>
-      <p>You can further divide a top bar into a title area and content area. Use the <code>.top-bar-title</code> class to create a title/branding area. Next to that can be any element, which is used for the rest of the content.</p>
-      <p>To use animations from the Motion UI library, include the <code>data-animation="someAnimationIn someAnimationOut"</code> attribute.</p>
-      <div class="primary callout show-for-medium">
-        <p>Scale your browser down to see the toggle happen.</p>
-      </div>
-    </div>
-  </div>
-
-
-  <header class="links">
+  <!-- <header class="links">
     <nav>
       <div class="row">
         <div class="small-12 columns">
@@ -73,6 +43,41 @@
       </div>
     </div>
   </header> -->
+
+  <header>
+    <div class="row">
+      <div class="small-12 columns">
+        <div class="title-bar">
+          <img src="images/kong-logo.png" alt="Kong, Inc logo">
+          <div class="menuIcon">
+            <div class="bar"></div>
+          </div>
+        </div>
+        <div class="top-bar" id="example-animated-menu">
+          <div class="top-bar-left">
+            <span class="menu-text"><img src="images/kong-logo.png" alt="Kong, Inc logo"></span>
+          </div>
+          <div class="top-bar-right">
+            <ul class="menu links">
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Plugins Hub</a></li>
+              <li><a href="#">Resources</a></li>
+              <li><a href="#">Partners</a></li>
+              <li><a href="#">Company</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#" class="btn">Try Enterprise</a></li>
+              <li><a href="#" class="btn">Installation</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+
+  <div class="">
+
+  </div>
 
   <section class="section section-hero">
     <div class="row">
@@ -345,5 +350,8 @@
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
+  <script src="js/main.js">
+
+  </script>
 </body>
 </html>
