--- a/app/index.html
+++ b/app/index.html
@@ -74,9 +74,25 @@
     </div>
   </header>
 
+  <div class="row">
+    <div class="small-12 columns links links-wrapper">
+      <p>Kong EE</p>
+      <ul class="menu-secondary">
+        <li><a href="#">Overview</a></li>
+        <li><a href="#">Admin GUI</a></li>
+        <li><a href="#">Security</a></li>
+        <li><a href="#">Dev Portal</a></li>
+        <li><a href="#">Analytics</a></li>
+        <li><a href="#">Scalability</a></li>
+        <li><a href="#">Support</a></li>
+      </ul>
+    </div>
+  </div>
 
-  <div class="">
-
+  <div class="row">
+    <div class="small-12 columns">
+      <hr>
+    </div>
   </div>
 
   <section class="section section-hero">
