--- a/app/index.html
+++ b/app/index.html
@@ -1565,14 +1565,33 @@
               </label>
             </div>
 
-
-
-
             <div class="small-12 large-6 columns phone">
+              <div class="row">
+                <div class="small-5 columns area-code">
+                  <label>Phone
+                    <input type="text">
+                    <div class="byline">Country Code</div>
+                  </label>
+                </div>
+                <div class="small-7 columns end push">
+                  <label class="">
+                    <input type="text">
+                    <div class="byline">Phone Number</div>
+                  </label>
+                </div>
+              </div>
+            </div>
+
+
+
+
+            <!-- <div class="small-12 large-6 columns phone">
               <label><div>Phone</div>
                 <input type="text"/>
               </label>
-            </div>
+            </div> -->
+
+
 
 
 
